--- a/src/Pages/Layout/layout.module.css
+++ b/src/Pages/Layout/layout.module.css
@@ -5,3 +5,13 @@
 .error {
   color: red;
 }
+.wrap {
+  padding: 20px;
+  background-image: url('../../img/6532.jpg');
+
+  background-size: cover;
+  background-position: center; /* Выравнивание изображения по центру */
+  background-repeat: no-repeat; /* Запрещает повторение изображения */
+  width: 100%;
+  height: 100vh;
+}
