--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -24,5 +24,5 @@
   border: 1px solid grey;
   padding: 20px;
   background-color: antiquewhite;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
