react_HW8_ img2

--- a/src/Pages/Layout/layout.module.css
+++ b/src/Pages/Layout/layout.module.css
@@ -7,7 +7,7 @@
 }
 .wrap {
   padding: 20px;
-  background-image: url('../../img/6532.jpg');
+  background-image: url('../../img/6532.webp');
 
   background-size: cover;
   background-position: center; /* Выравнивание изображения по центру */
