--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -2,13 +2,15 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 20px;
 }
 .filter {
   border-radius: 4px;
   border: 2px solid rgb(0, 234, 255);
+  margin: 5px 0 5px 0;
 }
 
-.btnDel:hover {
+/* .btnDel:hover {
   border: 4px solid blue;
 }
 .btnDel {
@@ -25,4 +27,4 @@
 }
 .btn:hover {
   border: 4px solid blue;
-}
+} */
