--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,16 +1,16 @@
 .overlay {
   position: fixed;
-  top: 20%;
-  left: 20%;
+  top: 15%;
+  left: 0;
   /* width: 100vw; */
   /* height: 100vh; */
-  width: 40%;
-  height: 40%;
+  width: 50%;
+  height: 55%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(101, 186, 225, 0.8);
+  background-color: antiquewhite;
   z-index: 1200;
 }
 
