--- a/src/components/AddContactForm/AddContactForm.module.css
+++ b/src/components/AddContactForm/AddContactForm.module.css
@@ -1,23 +1,23 @@
-.wrap {
+/* .wrap {
   padding: 26px;
-}
+} */
 
-.formWrap {
-  display: flex;
+/* .formWrap { */
+/* display: flex;
   flex-direction: column;
-  gap: 14px;
-  /* border: 1px solid gray; */
-  border-radius: 6px;
-  padding: 10px;
+  gap: 14px; */
+/* border: 1px solid gray; */
+/* border-radius: 6px; */
+/* padding: 10px;
   width: 40%;
-  margin-bottom: 20px;
-}
-.formItem {
+  margin-bottom: 20px; */
+/* } */
+/* .formItem {
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-.btn {
+} */
+/* .btn {
   width: 30%;
   background-color: aquamarine;
   border: 2px solid black;
@@ -26,4 +26,4 @@
 }
 .btn:hover {
   border: 4px solid blue;
-}
+} */
