--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,14 +1,14 @@
 .list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  margin-top: 20px;
+  gap: 8px;
+  margin-top: 18px;
 }
-.filter {
+/* .filter {
   border-radius: 4px;
   border: 2px solid rgb(0, 234, 255);
   margin: 5px 0 5px 0;
-}
+} */
 
 /* .btnDel:hover {
   border: 4px solid blue;
