--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,11 +1,11 @@
 .overlay {
   position: fixed;
-  top: 15%;
-  left: 0;
+  top: 20%;
+  left: 15%;
   /* width: 100vw; */
   /* height: 100vh; */
-  width: 50%;
-  height: 55%;
+  width: 40%;
+  height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
