--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
   width: 320px;
   margin: 20px;
 }
@@ -6,5 +6,6 @@
 .label {
   display: flex;
   flex-direction: column;
-  margin-bottom: 16px;
-}
+  margin-bottom: 16px; */
+/* color:  darkturquoise */
+/* } */
