--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -23,6 +23,5 @@
   justify-content: space-between;
   border: 1px solid grey;
   padding: 20px;
-  background-color: antiquewhite;
-  /* margin-bottom: 20px; */
+  background-color: rgb(216, 240, 239);
 }
