--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,16 +1,14 @@
 .overlay {
   position: fixed;
-  top: 20%;
+  top: 10%;
   left: 15%;
-  /* width: 100vw; */
-  /* height: 100vh; */
   width: 40%;
   height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: antiquewhite;
+  background-color: rgb(216, 240, 239);
   z-index: 1200;
 }
 
